<resources>
    <string name="app_name">UDRIVE</string>
    <string name="title_app_name">UDRIVE</string>
    <string name="title_home">Главная</string>
    <string name="title_profit">Доходы</string>
    <string name="title_other">Другое</string>
    <string name="title_drawer_home">Личный кабинет</string>
    <string name="title_drawer_settings">Настройки</string>
    <string name="title_drawer_question_answer">Вопрос - Ответ</string>
    <string name="title_drawer_public_offer">Публичная аферта</string>
    <string name="title_drawer_addresses">Адреса офисов</string>
    <string name="title_drawer_support">Служба поддержки</string>
    <string name="title_drawer_exit">Выход</string>
    <string name="active">Активен</string>
    <string name="notactive">Не Активен</string>
    <string name="title_card_barcode">Barcode</string>
    <string name="title_circle_ucoins">ucoins</string>
    <string name="title_status_classic">Classic</string>
    <string name="title_status_gold">Gold</string>
    <string name="title_status_platinum">Platinum</string>
    <string name="prev_month_trip_title_tmpl">поездок за %1s</string>
    <string name="week_trips_title">поездок за неделю</string>
    <string name="remain_trips_title">осталось поездок\nдо статуса</string>
    <string name="final_status_title">максимальный\nстатус</string>
    <string name="balance_title">ваш баланс</string>
    <string name="accrual_button_title">+ пополнить баланс</string>
    <string name="profit_history_button_title">история</string>
    <string name="profit_statement_button_title">ведомости</string>
    <string name="OK">OK</string>
    <string name="Cancel">Отмена</string>
    <string name="ucoins_umarket_content">Вы сможете использовать накопленные UСoins, в нашем UMarket для ваших будущих покупок</string>
    <string name="app_shared_prefs">ua.com.dquality.udrive.PREFERENCE_FILE_KEY</string>
    <string name="login">Вход</string>
    <string name="get_code">Получить SMS код</string>
    <string name="login_error_message">При попытке входа в систему, возникла ошибка. Обратитесь пожалуйста к Администратору</string>
    <string name="network_error_message">При попытке обращения к серверу, возникла ошибка. Обратитесь пожалуйста к Администратору</string>
    <string name="try_process_account_replenishment_error_message">При попытке получить данные от платежной системы, возникла ошибка. Обратитесь пожалуйста к Администратору</string>
    <string name="title_loading">Loading…</string>
    <string name="title_status_undefined">-</string>
    <string name="account_replenishment_dialog_title">Пополнение баланса</string>
    <string name="accrual_dialog_title">Пополните баланс, что бы активировать Ваш аккаунт</string>
    <string name="amount_replenishment_hint">Сумма пополнения</string>
    <string name="redirect_to_account_replenishment_title">перейти к оплате</string>
    <string name="liqpay_additional_info">Оплата совершается через сервис liqpay.ua. После нажатия кнопки “Оплатить”, Вы будете переадресованы на сайт платежного сервиса, для ввода данных Вашей карты.\n\n\n Возникли проблемы с оплатой?\n Звоните по телефонам ниже, работаем 24/7.\n\n\n +38 (095) 392 12 34\n +38 (098) 394 12 34\n +38 (063) 328 12 34</string>
    <string name="info_car_title">Марка машины:</string>
    <string name="info_car_year_title">Год выпуска:</string>
    <string name="info_email_title">Email:</string>
    <string name="info_phone_title">Телефон:</string>
    <string name="info_offer_acceptance_date_title">Дата принятия оферты:</string>
    <string name="info_birthday_title">День рождения:</string>
    <string name="info_bank_title">Банк:</string>
    <string name="info_bank_card_title">Номер карты:</string>
    <string name="follow_city_on_map_title">Показать на карте</string>
    <string name="info_city_title">Адреса офисов</string>
    <string name="account_description">Account</string>
    <string name="status_description">Status</string>
    <string name="call_title">Позвонить</string>
    <string name="telegram_title">Telegram</string>
    <string name="viber_title">Viber</string>
    <string name="facebook_title">Facebook</string>
    <string name="info_messanger_title">Выбирите удобный для вас мессенджер, для общения со службой поддержки:</string>
    <string name="info_phones_title">Телефоны круглосуточной техподдержки водителей UBERDRIVE:</string>
    <string name="shop_title">Shop</string>
    <string name="phone_hint">Телефон</string>
    <string name="code_hint">Код</string>
    <string name="bar_code_title">BAR CODE</string>
    <string name="empty_dash">-</string>
    <string name="amount_title">Сумма пополнения:</string>
    <string name="commission_amount_title">Коммисия сервиса LiqPay:</string>
    <string name="sum_title">Итого к оплате:</string>
    <string name="btn_perform_account_replenishment"><![CDATA[оплатить liqpay >>]]></string>
    <string name="slide_up_title">Slide Up</string>
    <string name="enter_phone_required">Введите телефон пожалуйста</string>
    <string name="enter_code_required">Введите код пожалуйста</string>
</resources>
