<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_drawer_home"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/title_drawer_home"
        />
    <item
        android:id="@+id/navigation_drawer_settings"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_settings"
        />
    <item
        android:id="@+id/navigation_drawer_question_answer"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_question_answer"
        />
    <item
        android:id="@+id/navigation_drawer_public_offer"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_public_offer"
        />
    <item
        android:id="@+id/navigation_drawer_addresses"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_addresses"
        />
    <item
        android:id="@+id/navigation_drawer_support"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_support"
        />
    <item
        android:id="@+id/navigation_drawer_exit"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_drawer_exit"
        />
</menu>