<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AccountInfoActivity">
    <ImageView
        android:id="@+id/info_account_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:tint="@color/colorPrimaryLight"
        android:contentDescription="@string/account_description" />
    <TextView
        android:id="@+id/info_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_account_image"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />
    <ImageView
        android:id="@+id/info_account_status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_6_dp"
        android:layout_toLeftOf="@id/info_account_status"
        android:layout_toStartOf="@id/info_account_status"
        android:layout_below="@+id/info_account_name"
        android:contentDescription="@string/status_description" />
    <TextView
        android:id="@+id/info_account_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dim_4_dp"
        android:layout_marginTop="@dimen/dim_2_dp"
        android:layout_below="@+id/info_account_name"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="@dimen/dim_4_dp" />
    <TextView
        android:id="@+id/info_car_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/info_account_status"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_car_title"
        />
    <TextView
        android:id="@+id/info_car_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/info_car_title"
        android:layout_alignEnd="@id/info_car_title"
        android:layout_below="@+id/info_account_status"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />
    <TextView
        android:id="@+id/info_car_year_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_car_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_car_year_title"
        />
    <TextView
        android:id="@+id/info_car_year_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_car_value"
        android:layout_alignRight="@id/info_car_year_title"
        android:layout_alignEnd="@id/info_car_year_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_email_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_car_year_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_email_title"
        />
    <TextView
        android:id="@+id/info_email_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_car_year_value"
        android:layout_alignRight="@id/info_email_title"
        android:layout_alignEnd="@id/info_email_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_phone_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_email_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_phone_title"
        />
    <TextView
        android:id="@+id/info_phone_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_email_value"
        android:layout_alignRight="@id/info_phone_title"
        android:layout_alignEnd="@id/info_phone_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_offer_acceptance_date_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_phone_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_offer_acceptance_date_title"
        />
    <TextView
        android:id="@+id/info_offer_acceptance_date_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_phone_value"
        android:layout_alignRight="@id/info_offer_acceptance_date_title"
        android:layout_alignEnd="@id/info_offer_acceptance_date_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_birthday_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_offer_acceptance_date_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_birthday_title"
        />
    <TextView
        android:id="@+id/info_birthday_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_offer_acceptance_date_value"
        android:layout_alignRight="@id/info_birthday_title"
        android:layout_alignEnd="@id/info_birthday_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_bank_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_birthday_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_bank_title"
        />
    <TextView
        android:id="@+id/info_bank_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_birthday_value"
        android:layout_alignRight="@id/info_bank_title"
        android:layout_alignEnd="@id/info_bank_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

    <TextView
        android:id="@+id/info_bank_card_title"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/info_bank_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_bank_card_title"
        />
    <TextView
        android:id="@+id/info_bank_card_value"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_bank_value"
        android:layout_alignRight="@id/info_bank_card_title"
        android:layout_alignEnd="@id/info_bank_card_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorYellow2"
        />

</RelativeLayout>