<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.com.dquality.udrive.SupportActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/info_messanger_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_messanger_title"/>

    <ImageView
        android:id="@+id/info_telegram_mess"
        android:layout_marginRight="@dimen/element_vertical_margin"
        android:layout_marginEnd="@dimen/element_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="@dimen/dim_56_dp"
        android:layout_height="@dimen/dim_56_dp"
        app:layout_constraintRight_toLeftOf="@+id/info_viber_mess"
        app:layout_constraintTop_toBottomOf="@+id/info_messanger_title"
        app:srcCompat="@drawable/ic_telegram_big_icon"
        android:contentDescription="@string/telegram_title" />

    <ImageView
        android:id="@+id/info_viber_mess"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="@dimen/dim_56_dp"
        android:layout_height="@dimen/dim_56_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_messanger_title"
        app:srcCompat="@drawable/ic_viber_big_icon"
        android:contentDescription="@string/viber_title" />

    <ImageView
        android:id="@+id/info_facebook_mess"
        android:layout_marginLeft="@dimen/element_vertical_margin"
        android:layout_marginStart="@dimen/element_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="@dimen/dim_56_dp"
        android:layout_height="@dimen/dim_56_dp"
        app:layout_constraintLeft_toRightOf="@+id/info_viber_mess"
        app:layout_constraintTop_toBottomOf="@+id/info_messanger_title"
        app:srcCompat="@drawable/ic_messenger_big_icon"
        android:contentDescription="@string/facebook_title" />

    <TextView
        android:id="@+id/info_phones_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_viber_mess"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:text="@string/info_phones_title"
         />

    <TextView
        android:id="@+id/info_phone1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        app:layout_constraintTop_toBottomOf="@+id/info_phones_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/info_phone1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_phones_title"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        android:background="@drawable/selector_info_button_background"
        android:text="@string/call_title"/>

    <TextView
        android:id="@+id/info_phone2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        app:layout_constraintTop_toBottomOf="@+id/info_phone1_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/info_phone2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_phone1_title"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        android:background="@drawable/selector_info_button_background"
        android:text="@string/call_title"/>

    <TextView
        android:id="@+id/info_phone3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        app:layout_constraintTop_toBottomOf="@+id/info_phone2_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/info_phone3_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_48_dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_phone2_title"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dim_4_dp"
        android:paddingBottom="@dimen/dim_4_dp"
        android:background="@drawable/selector_info_button_background"
        android:text="@string/call_title"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>